--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
       @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,6 +26,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Pytheas</title>
+    <meta name="theme-color" content="#ff5347" />
+    <meta name="msapplication-navbutton-color" content="#ff5347" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#ff5347" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
